TEZ-4726: Replace deprecated java.net.URL constructors with URI alternatives (#508) (Mahesh Raju Somalaraju reviewed by Laszlo Bodor)